--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "chroma-js": "^2.1.2",
+    "emoji-mart": "^3.0.1",
     "node-sass": "^6.0.1",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-form-validator-core": "^1.1.1",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "uuid": "^3.3.2",
     "web-vitals": "^1.1.2"
   },
