--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-form-validator-core": "^1.1.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-sortable-hoc": "^2.0.0",
     "uuid": "^3.3.2",
