--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "chroma-js": "^2.1.2",
     "emoji-mart": "^3.0.1",
+    "firebase": "^9.1.3",
     "node-sass": "^6.0.1",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
