--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-form-validator-core": "^1.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-sortable-hoc": "^2.0.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^3.3.2",
     "web-vitals": "^1.1.2"
   },
