--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-form-validator-core": "^1.1.1",
-    "react-router-dom": "^5.3.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^4.0.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-sortable-hoc": "^2.0.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "uuid": "^3.3.2",
     "web-vitals": "^1.1.2"
   },
