--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^6.0.1",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-form-validator-core": "^1.1.1",
