--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
