--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "chroma-js": "^2.4.2",
     "firebase": "^9.6.10",
+    "ityped": "^1.0.3",
     "rc-slider": "^10.0.0-alpha.6",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
