--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
