--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.33",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^18.0.4",
     "chroma-js": "^2.4.2",
     "firebase": "^9.6.10",
     "ityped": "^1.0.3",
@@ -27,6 +31,7 @@
     "reselect": "^4.1.5",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
