--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reselect": "^4.1.6",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -59,7 +60,9 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "babel-plugin-macros": "^3.1.0",
     "enzyme": "^3.11.0"
   }
 }
