--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.33",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^18.0.4",
+    "axios": "^0.27.2",
     "chroma-js": "^2.4.2",
     "firebase": "^9.6.10",
     "ityped": "^1.0.3",
